--- a/templates/businesses/settings/hours.html
+++ b/templates/businesses/settings/hours.html
@@ -91,8 +91,8 @@
                     <div class="col-md-2">
                         <div class="day-label">Monday</div>
                         <div class="form-check">
-                            {{ form.monday_open }}
-                            <label class="form-check-label small" for="{{ form.monday_open.id_for_label }}">
+                            {{ form.monday_is_open }}
+                            <label class="form-check-label small" for="{{ form.monday_is_open.id_for_label }}">
                                 Open
                             </label>
                         </div>
@@ -101,17 +101,17 @@
                         <div class="time-inputs">
                             <div class="time-input">
                                 <label class="small">Opening Time</label>
-                                {{ form.monday_start }}
-                                {% if form.monday_start.errors %}
-                                    <div class="invalid-feedback d-block">{{ form.monday_start.errors.0 }}</div>
+                                {{ form.monday_open }}
+                                {% if form.monday_open.errors %}
+                                    <div class="invalid-feedback d-block">{{ form.monday_open.errors.0 }}</div>
                                 {% endif %}
                             </div>
                             <span class="mx-2 mt-3">to</span>
                             <div class="time-input">
                                 <label class="small">Closing Time</label>
-                                {{ form.monday_end }}
-                                {% if form.monday_end.errors %}
-                                    <div class="invalid-feedback d-block">{{ form.monday_end.errors.0 }}</div>
+                                {{ form.monday_close }}
+                                {% if form.monday_close.errors %}
+                                    <div class="invalid-feedback d-block">{{ form.monday_close.errors.0 }}</div>
                                 {% endif %}
                             </div>
                         </div>
@@ -125,8 +125,8 @@
                     <div class="col-md-2">
                         <div class="day-label">Tuesday</div>
                         <div class="form-check">
-                            {{ form.tuesday_open }}
-                            <label class="form-check-label small" for="{{ form.tuesday_open.id_for_label }}">
+                            {{ form.tuesday_is_open }}
+                            <label class="form-check-label small" for="{{ form.tuesday_is_open.id_for_label }}">
                                 Open
                             </label>
                         </div>
@@ -135,17 +135,17 @@
                         <div class="time-inputs">
                             <div class="time-input">
                                 <label class="small">Opening Time</label>
-                                {{ form.tuesday_start }}
-                                {% if form.tuesday_start.errors %}
-                                    <div class="invalid-feedback d-block">{{ form.tuesday_start.errors.0 }}</div>
+                                {{ form.tuesday_open }}
+                                {% if form.tuesday_open.errors %}
+                                    <div class="invalid-feedback d-block">{{ form.tuesday_open.errors.0 }}</div>
                                 {% endif %}
                             </div>
                             <span class="mx-2 mt-3">to</span>
                             <div class="time-input">
                                 <label class="small">Closing Time</label>
-                                {{ form.tuesday_end }}
-                                {% if form.tuesday_end.errors %}
-                                    <div class="invalid-feedback d-block">{{ form.tuesday_end.errors.0 }}</div>
+                                {{ form.tuesday_close }}
+                                {% if form.tuesday_close.errors %}
+                                    <div class="invalid-feedback d-block">{{ form.tuesday_close.errors.0 }}</div>
                                 {% endif %}
                             </div>
                         </div>
@@ -159,8 +159,8 @@
                     <div class="col-md-2">
                         <div class="day-label">Wednesday</div>
                         <div class="form-check">
-                            {{ form.wednesday_open }}
-                            <label class="form-check-label small" for="{{ form.wednesday_open.id_for_label }}">
+                            {{ form.wednesday_is_open }}
+                            <label class="form-check-label small" for="{{ form.wednesday_is_open.id_for_label }}">
                                 Open
                             </label>
                         </div>
@@ -169,17 +169,17 @@
                         <div class="time-inputs">
                             <div class="time-input">
                                 <label class="small">Opening Time</label>
-                                {{ form.wednesday_start }}
-                                {% if form.wednesday_start.errors %}
-                                    <div class="invalid-feedback d-block">{{ form.wednesday_start.errors.0 }}</div>
+                                {{ form.wednesday_open }}
+                                {% if form.wednesday_open.errors %}
+                                    <div class="invalid-feedback d-block">{{ form.wednesday_open.errors.0 }}</div>
                                 {% endif %}
                             </div>
                             <span class="mx-2 mt-3">to</span>
                             <div class="time-input">
                                 <label class="small">Closing Time</label>
-                                {{ form.wednesday_end }}
-                                {% if form.wednesday_end.errors %}
-                                    <div class="invalid-feedback d-block">{{ form.wednesday_end.errors.0 }}</div>
+                                {{ form.wednesday_close }}
+                                {% if form.wednesday_close.errors %}
+                                    <div class="invalid-feedback d-block">{{ form.wednesday_close.errors.0 }}</div>
                                 {% endif %}
                             </div>
                         </div>
@@ -193,8 +193,8 @@
                     <div class="col-md-2">
                         <div class="day-label">Thursday</div>
                         <div class="form-check">
-                            {{ form.thursday_open }}
-                            <label class="form-check-label small" for="{{ form.thursday_open.id_for_label }}">
+                            {{ form.thursday_is_open }}
+                            <label class="form-check-label small" for="{{ form.thursday_is_open.id_for_label }}">
                                 Open
                             </label>
                         </div>
@@ -203,17 +203,17 @@
                         <div class="time-inputs">
                             <div class="time-input">
                                 <label class="small">Opening Time</label>
-                                {{ form.thursday_start }}
-                                {% if form.thursday_start.errors %}
-                                    <div class="invalid-feedback d-block">{{ form.thursday_start.errors.0 }}</div>
+                                {{ form.thursday_open }}
+                                {% if form.thursday_open.errors %}
+                                    <div class="invalid-feedback d-block">{{ form.thursday_open.errors.0 }}</div>
                                 {% endif %}
                             </div>
                             <span class="mx-2 mt-3">to</span>
                             <div class="time-input">
                                 <label class="small">Closing Time</label>
-                                {{ form.thursday_end }}
-                                {% if form.thursday_end.errors %}
-                                    <div class="invalid-feedback d-block">{{ form.thursday_end.errors.0 }}</div>
+                                {{ form.thursday_close }}
+                                {% if form.thursday_close.errors %}
+                                    <div class="invalid-feedback d-block">{{ form.thursday_close.errors.0 }}</div>
                                 {% endif %}
                             </div>
                         </div>
@@ -227,8 +227,8 @@
                     <div class="col-md-2">
                         <div class="day-label">Friday</div>
                         <div class="form-check">
-                            {{ form.friday_open }}
-                            <label class="form-check-label small" for="{{ form.friday_open.id_for_label }}">
+                            {{ form.friday_is_open }}
+                            <label class="form-check-label small" for="{{ form.friday_is_open.id_for_label }}">
                                 Open
                             </label>
                         </div>
@@ -237,17 +237,17 @@
                         <div class="time-inputs">
                             <div class="time-input">
                                 <label class="small">Opening Time</label>
-                                {{ form.friday_start }}
-                                {% if form.friday_start.errors %}
-                                    <div class="invalid-feedback d-block">{{ form.friday_start.errors.0 }}</div>
+                                {{ form.friday_open }}
+                                {% if form.friday_open.errors %}
+                                    <div class="invalid-feedback d-block">{{ form.friday_open.errors.0 }}</div>
                                 {% endif %}
                             </div>
                             <span class="mx-2 mt-3">to</span>
                             <div class="time-input">
                                 <label class="small">Closing Time</label>
-                                {{ form.friday_end }}
-                                {% if form.friday_end.errors %}
-                                    <div class="invalid-feedback d-block">{{ form.friday_end.errors.0 }}</div>
+                                {{ form.friday_close }}
+                                {% if form.friday_close.errors %}
+                                    <div class="invalid-feedback d-block">{{ form.friday_close.errors.0 }}</div>
                                 {% endif %}
                             </div>
                         </div>
@@ -261,8 +261,8 @@
                     <div class="col-md-2">
                         <div class="day-label">Saturday</div>
                         <div class="form-check">
-                            {{ form.saturday_open }}
-                            <label class="form-check-label small" for="{{ form.saturday_open.id_for_label }}">
+                            {{ form.saturday_is_open }}
+                            <label class="form-check-label small" for="{{ form.saturday_is_open.id_for_label }}">
                                 Open
                             </label>
                         </div>
@@ -271,17 +271,17 @@
                         <div class="time-inputs">
                             <div class="time-input">
                                 <label class="small">Opening Time</label>
-                                {{ form.saturday_start }}
-                                {% if form.saturday_start.errors %}
-                                    <div class="invalid-feedback d-block">{{ form.saturday_start.errors.0 }}</div>
+                                {{ form.saturday_open }}
+                                {% if form.saturday_open.errors %}
+                                    <div class="invalid-feedback d-block">{{ form.saturday_open.errors.0 }}</div>
                                 {% endif %}
                             </div>
                             <span class="mx-2 mt-3">to</span>
                             <div class="time-input">
                                 <label class="small">Closing Time</label>
-                                {{ form.saturday_end }}
-                                {% if form.saturday_end.errors %}
-                                    <div class="invalid-feedback d-block">{{ form.saturday_end.errors.0 }}</div>
+                                {{ form.saturday_close }}
+                                {% if form.saturday_close.errors %}
+                                    <div class="invalid-feedback d-block">{{ form.saturday_close.errors.0 }}</div>
                                 {% endif %}
                             </div>
                         </div>
@@ -295,8 +295,8 @@
                     <div class="col-md-2">
                         <div class="day-label">Sunday</div>
                         <div class="form-check">
-                            {{ form.sunday_open }}
-                            <label class="form-check-label small" for="{{ form.sunday_open.id_for_label }}">
+                            {{ form.sunday_is_open }}
+                            <label class="form-check-label small" for="{{ form.sunday_is_open.id_for_label }}">
                                 Open
                             </label>
                         </div>
@@ -305,17 +305,17 @@
                         <div class="time-inputs">
                             <div class="time-input">
                                 <label class="small">Opening Time</label>
-                                {{ form.sunday_start }}
-                                {% if form.sunday_start.errors %}
-                                    <div class="invalid-feedback d-block">{{ form.sunday_start.errors.0 }}</div>
+                                {{ form.sunday_open }}
+                                {% if form.sunday_open.errors %}
+                                    <div class="invalid-feedback d-block">{{ form.sunday_open.errors.0 }}</div>
                                 {% endif %}
                             </div>
                             <span class="mx-2 mt-3">to</span>
                             <div class="time-input">
                                 <label class="small">Closing Time</label>
-                                {{ form.sunday_end }}
-                                {% if form.sunday_end.errors %}
-                                    <div class="invalid-feedback d-block">{{ form.sunday_end.errors.0 }}</div>
+                                {{ form.sunday_close }}
+                                {% if form.sunday_close.errors %}
+                                    <div class="invalid-feedback d-block">{{ form.sunday_close.errors.0 }}</div>
                                 {% endif %}
                             </div>
                         </div>
@@ -375,13 +375,13 @@
             </div>
             <div class="card-body">
                 <div class="small">
-                    <p><strong>Monday:</strong> {% if tenant_settings.monday_open %}{{ tenant_settings.monday_start }} - {{ tenant_settings.monday_end }}{% else %}Closed{% endif %}</p>
-                    <p><strong>Tuesday:</strong> {% if tenant_settings.tuesday_open %}{{ tenant_settings.tuesday_start }} - {{ tenant_settings.tuesday_end }}{% else %}Closed{% endif %}</p>
-                    <p><strong>Wednesday:</strong> {% if tenant_settings.wednesday_open %}{{ tenant_settings.wednesday_start }} - {{ tenant_settings.wednesday_end }}{% else %}Closed{% endif %}</p>
-                    <p><strong>Thursday:</strong> {% if tenant_settings.thursday_open %}{{ tenant_settings.thursday_start }} - {{ tenant_settings.thursday_end }}{% else %}Closed{% endif %}</p>
-                    <p><strong>Friday:</strong> {% if tenant_settings.friday_open %}{{ tenant_settings.friday_start }} - {{ tenant_settings.friday_end }}{% else %}Closed{% endif %}</p>
-                    <p><strong>Saturday:</strong> {% if tenant_settings.saturday_open %}{{ tenant_settings.saturday_start }} - {{ tenant_settings.saturday_end }}{% else %}Closed{% endif %}</p>
-                    <p class="mb-0"><strong>Sunday:</strong> {% if tenant_settings.sunday_open %}{{ tenant_settings.sunday_start }} - {{ tenant_settings.sunday_end }}{% else %}Closed{% endif %}</p>
+                    <p><strong>Monday:</strong> {% if tenant_settings.monday_is_open and tenant_settings.monday_open %}{{ tenant_settings.monday_open }} - {{ tenant_settings.monday_close }}{% else %}Closed{% endif %}</p>
+                    <p><strong>Tuesday:</strong> {% if tenant_settings.tuesday_is_open and tenant_settings.tuesday_open %}{{ tenant_settings.tuesday_open }} - {{ tenant_settings.tuesday_close }}{% else %}Closed{% endif %}</p>
+                    <p><strong>Wednesday:</strong> {% if tenant_settings.wednesday_is_open and tenant_settings.wednesday_open %}{{ tenant_settings.wednesday_open }} - {{ tenant_settings.wednesday_close }}{% else %}Closed{% endif %}</p>
+                    <p><strong>Thursday:</strong> {% if tenant_settings.thursday_is_open and tenant_settings.thursday_open %}{{ tenant_settings.thursday_open }} - {{ tenant_settings.thursday_close }}{% else %}Closed{% endif %}</p>
+                    <p><strong>Friday:</strong> {% if tenant_settings.friday_is_open and tenant_settings.friday_open %}{{ tenant_settings.friday_open }} - {{ tenant_settings.friday_close }}{% else %}Closed{% endif %}</p>
+                    <p><strong>Saturday:</strong> {% if tenant_settings.saturday_is_open and tenant_settings.saturday_open %}{{ tenant_settings.saturday_open }} - {{ tenant_settings.saturday_close }}{% else %}Closed{% endif %}</p>
+                    <p class="mb-0"><strong>Sunday:</strong> {% if tenant_settings.sunday_is_open and tenant_settings.sunday_open %}{{ tenant_settings.sunday_open }} - {{ tenant_settings.sunday_close }}{% else %}Closed{% endif %}</p>
                 </div>
             </div>
         </div>
