--- a/templates/suppliers/invoice_detail.html
+++ b/templates/suppliers/invoice_detail.html
@@ -76,6 +76,7 @@
                                     {% elif business.phone %}Phone: {{ business.phone }}<br>{% endif %}
                                     {% if tenant_settings.contact_email %}Email: {{ tenant_settings.contact_email }}<br>
                                     {% elif business.email %}Email: {{ business.email }}<br>{% endif %}
+                                    {% if tenant_settings.tax_number %}PIN: {{ tenant_settings.tax_number }}<br>{% endif %}
                                 </div>
                             </div>
                             <div class="col-md-6 text-end">
