--- a/templates/services/order_print.html
+++ b/templates/services/order_print.html
@@ -233,25 +233,13 @@
             font-family: monospace;
         }
     </style>
+    {% include 'includes/business_styles.html' %}
 </head>
 <body>
     <div class="receipt">
         <!-- Header -->
         <div class="header">
-            <!-- Business Logo -->
-            {% if tenant_settings.business_logo %}
-            <div class="logo-section" style="text-align: center; margin-bottom: 2px;">
-                <img src="{{ tenant_settings.business_logo.url }}" alt="{{ business.name }} Logo" style="max-height: 20px; max-width: 50px;">
-            </div>
-            {% elif tenant_settings.logo_url %}
-            <div class="logo-section" style="text-align: center; margin-bottom: 2px;">
-                <img src="{{ tenant_settings.logo_url }}" alt="{{ business.name }} Logo" style="max-height: 20px; max-width: 50px;">
-            </div>
-            {% endif %}
-            
-            <div class="company-name">{{ business.name|upper }}</div>
-            <div class="company-info">Tel: {{ business.phone_number }}</div>
-            <div class="company-info">{{ business.email }}</div>
+            {% include 'includes/business_header.html' %}
             <div class="receipt-title">SERVICE ORDER</div>
         </div>
         
