--- a/templates/subscriptions/invoice_pdf.html
+++ b/templates/subscriptions/invoice_pdf.html
@@ -264,6 +264,7 @@
             color: #721c24;
         }
     </style>
+    {% include 'includes/business_styles.html' %}
 </head>
 <body>
     <div class="invoice-container">
@@ -272,8 +273,8 @@
             <div class="company-info">
                 <!-- Business Logo -->
                 {% if business.tenant_settings.business_logo %}
-                <div class="business-logo" style="margin-bottom: 10px;">
-                    <img src="{{ business.tenant_settings.business_logo.url }}" alt="AutoWash App Logo" style="max-height: 60px; max-width: 200px;">
+                <div class="business-logo">
+                    <img src="{{ business.tenant_settings.business_logo.url }}" alt="AutoWash App Logo" class="logo-img">
                 </div>
                 {% endif %}
                 
@@ -283,6 +284,7 @@
                     Nairobi, Kenya<br>
                     Email: support@autowash.co.ke<br>
                     Phone: +254 700 000 000<br>
+                    PIN: P051234567A<br>
                     Website: www.autowash.co.ke
                 </div>
             </div>
